# SelfRegisterFactory

./: CMakeLists.txt  main.cpp
plugin/: registry.cpp  registry.h  shape.h
plugin/impl/: Circle.cpp
